--- a/themes/Theme_Bancolombia/layouts/_default/list.html
+++ b/themes/Theme_Bancolombia/layouts/_default/list.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 
 <main>
+	
 	<div class="catalogue">
 		{{ range (.Paginate .Pages).Pages }}
 			{{ .Render "summary" }}
@@ -15,8 +16,9 @@
 			<a href="{{ .Paginator.Next.URL }}" class="right arrow">&#8594;</a>
 		{{ end }}
 	
-		<!--<span>{{ .Paginator.PageNumber }}</span>-->
+		<span>{{ .Paginator.PageNumber }}</span>
 	</div>
+	
 </main>
 
 {{ end }}
