--- a/themes/Theme_Bancolombia/assets/scss/tale/_layout.scss
+++ b/themes/Theme_Bancolombia/assets/scss/tale/_layout.scss
@@ -101,7 +101,7 @@ header {
 }
   
 footer {
-  background-color:rgba(255, 200, 20, 0.8);
+  background-color:#FF000000;
   font-family: $serif-secondary;
   padding: 2rem 0;
   text-align: center;
