modifies in files and folders, and new public folder

--- a/themes/bancolombia-doc/layouts/partials/footer.html
+++ b/themes/bancolombia-doc/layouts/partials/footer.html
@@ -23,7 +23,7 @@
         <table>
         <tr>
             <td><section class="izquierda">
-                <img src="{{ .Site.BaseURL }}images/LogoWhite_T.PNG" alt="Logo" width="40%x">
+                <img src="{{ .Site.BaseURL }}/images/LogoWhite_T.PNG" alt="Logo" width="40%x">
             </section></td>
 
             <td>
