--- a/themes/bancolombia-doc/layouts/partials/head.html
+++ b/themes/bancolombia-doc/layouts/partials/head.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--link tambien se usa para llamar contenido por ruta-->
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" type="text/css" media="all" />
     <!--.Site.BaseURL se usa ara direccionar rutas relacionas ya sea local o desplegado/remoto-->
     <!--Crear una clase del logo-->
     <!--{{ range .Site.Params.style_css }}
@@ -16,7 +16,7 @@
             <div class="head-clase">
             
                 <div class="imagen-head">
-                    <img src="{{ .Site.BaseURL }}images/Logo_Cut.png" alt="Logo" width="60%x">
+                    <img src="{{ .Site.BaseURL }}/images/Logo_Cut.png" alt="Logo" width="60%x">
                 </div>
             
                 <div>
