--- a/themes/vertical_nav/layouts/partials/head.html
+++ b/themes/vertical_nav/layouts/partials/head.html
@@ -16,7 +16,7 @@
                 </div>
             
                 <div>
-                    <h1 class="titulo-principal"> Grupo Bancolombia </h1>
+                    <h1 class="titulo-principal"> Grupo BANCOLOMBIA </h1>
                 </div>
             
             </div>
