--- a/themes/vertical_nav/layouts/partials/footer.html
+++ b/themes/vertical_nav/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 
         <div class="footer_izquierda">
 
-            <img src="{{ .Site.BaseURL }}images/LogoWhite_T.PNG" alt="Logo" width="50%x">
+            <img src="{{ .Site.BaseURL }}/images/LogoWhite_T.PNG" alt="Logo" width="50%x">
 
         </div>
 
