new files and folders

--- a/themes/vertical_nav/layouts/partials/head.html
+++ b/themes/vertical_nav/layouts/partials/head.html
@@ -4,9 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--link tambien se usa para llamar contenido por ruta-->
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" type="text/css" media="all" />
+    <!--<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" type="text/css" media="all" />-->
     <!--.Site.BaseURL se usa ara direccionar rutas relacionas ya sea local o desplegado/remoto-->
     <!--Crear una clase del logo-->
+    {{ range .Site.Params.custom_css -}}
+        <link rel="stylesheet" href="{{ . | absURL }}">
+    {{- end }}
 
         <a style="text-decoration:none" href="https://www.grupobancolombia.com/personas">
             <div class="head__content">
