--- a/themes/vertical_nav/static/css/style.css
+++ b/themes/vertical_nav/static/css/style.css
@@ -49,7 +49,6 @@ body {
   background-color: white;
   margin: 0;  
   order: 0;
-  justify-content: center;
   min-width: 20%;
   max-width: 25%;
   
@@ -64,6 +63,7 @@ body {
 
 .content{
   padding: 2rem;
+  text-align: justify;
 }
 /**Layout footer*/
 footer {
@@ -217,7 +217,18 @@ footer {
   */
 }
 
+.menu-vert ul ul {
+  list-style-type: none;
+  display:none;
+  position: relative;
+  left: -2rem;
+}
+
 .submenu-vert {
+  position: relative;
+}
+
+.submenu-vert-level2 {
   position: relative;
 }
 
