--- a/themes/vertical_nav/static/css/style.css
+++ b/themes/vertical_nav/static/css/style.css
@@ -113,7 +113,7 @@ footer {
   justify-content:baseline;
   background-color: rgb(40, 40, 40);
   list-style: none;
-  
+  color: white
 }
 .site-nav0 .mainMenu0 {
   
