--- a/themes/vertical_nav/static/css/template-vertical-nav/menus.css
+++ b/themes/vertical_nav/static/css/template-vertical-nav/menus.css
@@ -1,107 +1,3 @@
-/* Configuración de todo el HTML */
-html{
-  min-height: 100%; 
-  position: relative;
-}
-
-/* LAYOUT */
-/**Layout encabezado*/
-.head__content{
-  display:flex;
-  justify-content:baseline;
-  background-color:rgb(40, 40, 40);
-}
-
-.imagen-head{
-  padding: 1.6rem 0rem 1.4rem 4rem;
-  order:0;
-}
-
-.titulo-principal{
-  
-  color: rgb(255, 254, 254);
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  padding: 0rem;
-  order:1;
-}
-
-/**Layout body*/
-body {
-  background-color: white;
-  line-height: 1.5; /*Interlineado*/
-  margin: 0 auto;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.body__content{
-  display:flex;
-  margin: 0;
-  padding: 0;
-}
-
-.menu-secundario{
-
-  /*color:rgb(44, 44, 44);*/
-  text-decoration: none; /*Link no subrayado*/
-  border-right-color: rgb(50, 50, 50);
-  border-right-width: 0.1rem;
-  border-right-style: solid;
-  background-color: white;
-  margin: 0;  
-  order: 0;
-  min-width: 20%;
-  max-width: 25%;
-  
-}
-
-.contenido-principal{
-  background-color: inherit;
-  color:rgb(44, 44, 44);
-  text-align: justify;
-  order: 1;
-}
-
-.content{
-  padding: 2rem;
-  text-align: justify;
-}
-/**Layout footer*/
-footer {
-
-  margin-top: 1rem;
-  padding: 0;
-  bottom: 0;
-  position: relative;  
-}
-
-.footer__content {
-
-  background-color: rgb(44, 44, 44);
-  display:flex;
-  margin: 0;
-  padding: 0;
-  color:white;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  
-}
-
-.footer_izquierda {
-
-  margin: 0rem;
-  padding: 0.5rem 0 0.5rem 3rem;
-  order:0;
-
-}
-
-.footer_derecha {
-
-  margin: 0rem;
-  padding: 0.5rem 0rem 0.5rem 0rem;
-  font-size: 80%;
-  width: 70%;
-  order:1;
-}
-
 /* Navegación del menu */
 /*sección de navegación 0 por la página */
 .site-header0{
@@ -140,9 +36,9 @@ footer {
 }
 
 .site-nav0 ul {
-  list-style: none;
-  background-color: inherit;
-  padding: 0 2rem 0 2rem; 
+   list-style: none;
+   background-color: inherit;
+   padding: 0 2rem 0 2rem; 
 }
 
 .site-nav0 .mainMenu0:hover{
@@ -200,7 +96,7 @@ footer {
   border-bottom-style: solid;               
 }
 
-.submenu-vert-level{
+.menu-vert ul{
 
   list-style-type: none;
   display:none;
@@ -216,14 +112,13 @@ footer {
   transition: .3s all ease-in;
   */
 }
-/*
+
 .menu-vert ul ul {
   list-style-type: none;
   display:none;
   position: relative;
   left: -2rem;
 }
-*/
 
 .submenu-vert {
   position: relative;
@@ -251,14 +146,5 @@ footer {
   /*transition: .3s all ease-in;*/
 }
 
-/* LISTS */
-.post-snippet {
-  margin-bottom: 1rem;
-}
 
-.post-snippet h3 {
-  margin-bottom: 0.25rem;
-  font-weight: bold;
-  
-}
 
