modifies and new files and folders

--- a/themes/vertical_nav/layouts/shortcodes/diagrama_dominios.html
+++ b/themes/vertical_nav/layouts/shortcodes/diagrama_dominios.html
@@ -51,6 +51,7 @@
     classDef titulo fill:#9434CB,stroke:#333234,stroke-width:2px
     classDef Dominio fill:#C289E2,stroke:#333234
     classDef sub fill:#F8ECFF,stoke:#9434CB
+    click Domi "https://grupobancolombia.com/personas" "This is a link"
 </div>
     
     
